--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
+    "barryvdh/laravel-dompdf": "^3.1",
     "guzzlehttp/guzzle": "^7.2",
+    "illuminate/filesystem": "*",
     "laravel/framework": "^10.23",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8"
