--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "illuminate/filesystem": "*",
     "laravel/framework": "^10.23",
     "laravel/sanctum": "^3.2",
-    "laravel/tinker": "^2.8"
+    "laravel/tinker": "^2.8",
+    "setasign/fpdf": "^1.8",
+    "setasign/fpdi": "^2.6"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
