--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@babel/preset-env": "7.22.5",
     "@prettier/plugin-php": "0.19.6",
     "ajv": "8.12.0",
-    "axios": "1.4.0",
+    "axios": "^1.13.2",
     "babel-loader": "9.1.2",
+    "browser-sync": "^3.0.4",
+    "browser-sync-webpack-plugin": "^2.4.0",
     "cross-env": "7.0.3",
+    "laravel-mix": "^6.0.49",
     "laravel-vite-plugin": "^2.0.1",
     "lodash": "4.17.21",
     "postcss": "^8.5.6",
