--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "ajv": "8.12.0",
     "axios": "^1.13.2",
     "babel-loader": "9.1.2",
+    "browser-sync": "^3.0.4",
+    "browser-sync-webpack-plugin": "^2.4.0",
     "cross-env": "7.0.3",
+    "laravel-mix": "^6.0.49",
     "laravel-vite-plugin": "^2.0.1",
     "lodash": "4.17.21",
     "postcss": "8.4.26",
@@ -91,6 +94,7 @@
     "jquery": "3.7.0",
     "masonry-layout": "4.2.2",
     "node-waves": "0.7.6",
-    "perfect-scrollbar": "1.5.5"
+    "perfect-scrollbar": "1.5.5",
+    "sweetalert2": "^11.26.3"
   }
 }
