--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
     "setasign/fpdf": "^1.8",
-    "setasign/fpdi": "^2.6"
+    "setasign/fpdi": "^2.6",
+    "vinkla/hashids": "^11.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
